c4prj2_input/grade.txt
Grading at Mon Mar  8 21:04:09 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:17:16: error: implicit declaration of function ‘card_from_letter’ [-Werror=implicit-function-declaration]
     card_t c = card_from_letter(copy[0],copy[1]);
                ^
input.c:17:16: error: invalid initializer
input.c:18:10: error: invalid type argument of ‘->’ (have ‘card_t {aka struct card_tag}’)
     if( c->value != "?"){
          ^
input.c:19:21: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘deck’
       add_card_to(fc->deck[n_decks],c);
                     ^
input.c:19:28: error: ‘n_decks’ undeclared (first use in this function)
       add_card_to(fc->deck[n_decks],c);
                            ^
input.c:19:28: note: each undeclared identifier is reported only once for each function it appears in
input.c:23:53: error: ‘deck’ undeclared (first use in this function)
      add_future_card(fc,fc->n_decks[n_decks]->cards[deck->n_cards],unknown);
                                                     ^
input.c:28:12: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘deck’
   return fc->deck;
            ^
input.c: In function ‘read_input’:
input.c:33:34: error: invalid operands to binary * (have ‘size_t * {aka long unsigned int *}’ and ‘long unsigned int’)
   deck_t ** read = malloc(n_hands*sizeof(*read));
                                  ^
input.c:40:7: error: request for member ‘n_cards’ in something not a structure or union
   read->n_cards = i;
       ^
input.c: In function ‘hand_from_string’:
input.c:29:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
